# sqlalchemy-continuum

./: .gitignore  .pypirc  .travis.yml  CHANGES.rst  README.md  README.rst  RELEASE.md  benchmark.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: docs.yml  main.yml
benchmarks/: native_version_id_generation.py  trigger_vs_explicit_call.py  version_record_creation.py
docs/: Makefile  alembic.rst  api.rst  conf.py  configuration.rst  extensions.rst  history_objects.rst  index.rst  intro.rst  make.bat  native_versioning.rst  plugins.rst  queries.rst  revert.rst  schema.rst  sqlmodel.rst  transactions.rst  utilities.rst  version_objects.rst
sqlalchemy_continuum/: __init__.py  alembic.py  builder.py  exc.py  expression_reflector.py  factory.py  fetcher.py  listener.py  manager.py  model_builder.py  operation.py  primitives.py  relationship_builder.py  reverter.py  sa_utils.py  schema.py  strategy.py  table_builder.py  transaction.py  transaction_log.py  unit_of_work.py  utils.py  version.py  versioned.py
sqlalchemy_continuum/dialects/: postgresql.py
sqlalchemy_continuum/drivers/: postgresql.py
sqlalchemy_continuum/ext/: activity_stream.py  flask.py
sqlalchemy_continuum/plugins/: __init__.py  activity.py  base.py  flask.py  null_delete.py  property_mod_tracker.py  pyramid_plugin.py  transaction_changes.py  transaction_meta.py
sqlalchemy_versioned/: __init__.py  model_builder.py  relationship_builder.py  sample.sql  table_builder.py  trigger_builder.py  versioned.py
tests/: __init__.py  test_accessors.py  test_alembic.py  test_changeset.py  test_column_aliases.py  test_column_inclusion_and_exclusion.py  test_common_base_class.py  test_compatibility.py  test_composite_primary_key.py  test_configuration.py  test_custom_condition_relations.py  test_custom_schema.py  test_custom_version_base_class.py  test_delete.py  test_exotic_listener_chaining.py  test_exotic_operation_combos.py  test_i18n.py  test_insert.py  test_join_table_inheritance.py  test_many_to_many_relations.py  test_mapper_args.py  test_model_builder.py  test_one_to_many_relations.py  test_postgresql_adapter.py  test_raw_sql.py  test_reify.py  test_relationship_builder.py  test_relationship_with_inheritance.py  test_revert.py  test_savepoints.py  test_sessions.py  test_single_table_inheritance.py  test_table_builder.py  test_track_property_modifications.py  test_transaction.py  test_transaction_changes.py  test_transaction_log.py  test_triggers.py  test_unique_bidict.py  test_update.py  (+6 more)
tests/builders/: test_model_builder.py  test_relationship_builder.py  test_table_builder.py
tests/dialects/: test_triggers.py
tests/ext/: test_activity.py  test_flask.py
tests/inheritance/: test_common_base_class.py  test_concrete_inheritance.py  test_join_table_inheritance.py  test_multi_level_inheritance.py  test_single_table_inheritance.py
tests/plugins/: test_activity.py  test_flask.py  test_null_delete.py  test_plugin_collection.py  test_property_mod_tracker.py  test_transaction_changes.py  test_transaction_meta.py
tests/relationships/: test_association_table_relations.py  test_custom_condition_relations.py  test_declarative_association_table.py  test_dynamic_relationships.py  test_many_to_many_relations.py  test_non_versioned_classes.py  test_one_to_many_relations.py  test_one_to_one_relations.py
tests/revert/: test_deep_relationships.py  test_many_to_many_relationships.py  test_one_to_one_relationship.py  test_one_to_one_with_secondary_table.py
tests/schema/: test_update_end_transaction_id.py  test_update_property_mod_flags.py
tests/sqlmodel/: __init__.py  test_delete.py  test_insert.py  test_revert.py  test_transaction.py  test_update.py  test_versions.py
tests/utils/: test_changeset.py  test_count_versions.py  test_get_bind.py  test_get_versioning_manager.py  test_is_modified.py  test_parent_class.py  test_parent_table.py  test_transaction_class.py  (+3 more)
(+3 files in other folders)
